--- a/projects/msvc/GLideN64.vcxproj
+++ b/projects/msvc/GLideN64.vcxproj
@@ -190,12 +190,12 @@ copy /Y "$(OutDir)$(TargetName).*" "$(Mupen64PluginsDir)")</Command>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)'=='Debug'">
     <Link>
-      <AdditionalDependencies>GLideNUI\debug\GLideNUI.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>bin\Win32\Debug\lib\GLideNUI.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)'=='Release'">
     <Link>
-      <AdditionalDependencies>GLideNUI\release\GLideNUI.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>bin\Win32\Release\lib\GLideNUI.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalOptions>/LTCG %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
