--- a/src/GLideNHQ/CMakeLists.txt
+++ b/src/GLideNHQ/CMakeLists.txt
@@ -45,6 +45,7 @@ if(WIN32)
   LINK_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/lib )
   add_definitions(
 	-DWIN32
+	-DOS_WINDOWS
 	-D_CRT_SECURE_NO_WARNINGS
   )
 endif(WIN32)
