--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ src/Revision.h
 /projects/msvc/.vs
 /projects/msvc/GLideN64.VC.VC.opendb
 /projects/msvc/GLideN64.VC.db
+/projects/msvc/GeneratedFiles
