--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -120,6 +120,18 @@ Good_Name=Pokemon Stadium Kin Gin (J)
 frameBufferEmulation\copyToRDRAM=0
 frameBufferEmulation\copyDepthToRDRAM=0
 
+[SAN%20FRANCISCO%20RUSH]
+Good_Name=San Francisco Rush Extreme Racing (U)
+frameBufferEmulation\bufferSwapMode=1
+
+[S.F.RUSH]
+Good_Name=San Francisco Rush Extreme Racing (E)
+frameBufferEmulation\bufferSwapMode=1
+
+[S.F.%20RUSH]
+Good_Name=San Francisco Rush Extreme Racing (U)
+frameBufferEmulation\bufferSwapMode=1
+
 [SHADOWMAN]
 Good_Name=Shadow Man (B)(E)(F)(G)(U)
 frameBufferEmulation\copyDepthToRDRAM=0
@@ -146,14 +158,5 @@ frameBufferEmulation\N64DepthCompare=1
 Good_Name=Tonic Trouble (E)(U)
 frameBufferEmulation\copyToRDRAM=1
 
-[S.F.%20RUSH]
-Good_Name=San Francisco Rush Extreme Racing (U)
-frameBufferEmulation\bufferSwapMode=1
-
-[S.F.RUSH]
-Good_Name=San Francisco Rush Extreme Racing (E)
-frameBufferEmulation\bufferSwapMode=1
-
-[SAN%20FRANCISCO%20RUSH]
-Good_Name=San Francisco Rush Extreme Racing (U)
+[W.G.%203DHOCKEY]
 frameBufferEmulation\bufferSwapMode=1
