Add custom setting for California Speed.

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -18,6 +18,9 @@ frameBufferEmulation\N64DepthCompare=1
 Good_Name=Eikou no Saint Andrews (J)
 frameBufferEmulation\forceDepthBufferClear=1
 
+[CAL%20SPEED]
+frameBufferEmulation\bufferSwapMode=1
+
 [CASTLEVANIA2]
 Good_Name=Castlevania - Legacy Of Darkness (E)(U)
 frameBufferEmulation\copyToRDRAM=1
