Add custom settings for Mario Artist Talent Studio, task #2025

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -25,6 +25,10 @@ frameBufferEmulation\bufferSwapMode=1
 Good_Name=Castlevania - Legacy Of Darkness (E)(U)
 frameBufferEmulation\copyToRDRAM=1
 
+[DMTJ]
+Good_Name=Mario Artist Talent Studio (64dd disk)
+frameBufferEmulation\copyAuxToRDRAM=1
+
 [DR.MARIO%2064]
 Good_Name=Dr. Mario 64 (U)
 frameBufferEmulation\copyFromRDRAM=1
@@ -99,6 +103,10 @@ frameBufferEmulation\copyDepthToRDRAM=0
 [MARIO%20STORY]
 Good_Name=Mario Story (J)
 frameBufferEmulation\copyToRDRAM=1
+
+[NUD-DMTJ-JPN_convert]
+Good_Name=Mario Artist Talent Studio (cart hack)
+frameBufferEmulation\copyAuxToRDRAM=1
 
 [PAPER%20MARIO]
 Good_Name=Paper Mario (E)(U)
