Add custom settings for Mario Paint Studio, task #2024

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -25,6 +25,10 @@ frameBufferEmulation\bufferSwapMode=1
 Good_Name=Castlevania - Legacy Of Darkness (E)(U)
 frameBufferEmulation\copyToRDRAM=1
 
+[DMPJ]
+Good_Name=Mario Paint Studio (64dd disk)
+frameBufferEmulation\copyFromRDRAM=1
+
 [DMTJ]
 Good_Name=Mario Artist Talent Studio (64dd disk)
 frameBufferEmulation\copyAuxToRDRAM=1
@@ -103,6 +107,10 @@ frameBufferEmulation\copyDepthToRDRAM=0
 [MARIO%20STORY]
 Good_Name=Mario Story (J)
 frameBufferEmulation\copyToRDRAM=1
+
+[NUD-DMPJ-JPN_convert]
+Good_Name=Mario Paint Studio (cart hack)
+frameBufferEmulation\copyFromRDRAM=1
 
 [NUD-DMTJ-JPN_convert]
 Good_Name=Mario Artist Talent Studio (cart hack)
