--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -33,6 +33,10 @@ frameBufferEmulation\copyFromRDRAM=1
 Good_Name=Mario Artist Talent Studio (64dd disk)
 frameBufferEmulation\copyAuxToRDRAM=1
 
+[DONKEY%20KONG%2064]
+Good_Name=Donkey Kong 64 (E)(J)(U)
+frameBufferEmulation\copyDepthToRDRAM=1
+
 [DR.MARIO%2064]
 Good_Name=Dr. Mario 64 (U)
 frameBufferEmulation\copyFromRDRAM=1
