Add custom setting for Human Grand Prix - New Generation (J).

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -69,6 +69,9 @@ frameBufferEmulation\copyToRDRAM=1
 Good_Name=Hexen (E)(F)(G)(J)(U)
 frameBufferEmulation\copyToRDRAM=1
 
+[HUMAN%20GRAND%20PRIX]
+frameBufferEmulation\copyToRDRAM=1
+
 [I%20S%20S%2064]
 Good_Name=International Superstar Soccer 64 (E) (U)
 frameBufferEmulation\N64DepthCompare=1
