Add custom setting for Jikkyou World Soccer 3 (J).

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -85,6 +85,9 @@ frameBufferEmulation\fbInfoDisabled=0
 Good_Name=Jet Force Gemini Kiosk Demo (U)
 frameBufferEmulation\fbInfoDisabled=0
 
+[J%20WORLD%20SOCCER3]
+frameBufferEmulation\N64DepthCompare=1
+
 [PERFECT%20STRIKER]
 Good_Name=Jikkyou J.League Perfect Striker (J)
 frameBufferEmulation\N64DepthCompare=1
