Add custom setting for Olympic Hockey Nagano '98, #2028

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -88,6 +88,9 @@ frameBufferEmulation\fbInfoDisabled=0
 [J%20WORLD%20SOCCER3]
 frameBufferEmulation\N64DepthCompare=1
 
+[OLYMPIC%20HOCKEY]
+frameBufferEmulation\bufferSwapMode=1
+
 [PERFECT%20STRIKER]
 Good_Name=Jikkyou J.League Perfect Striker (J)
 frameBufferEmulation\N64DepthCompare=1
