Add custom setting for Rush 2 - Extreme Racing.

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -152,6 +152,9 @@ Good_Name=Pokemon Stadium Kin Gin (J)
 frameBufferEmulation\copyToRDRAM=0
 frameBufferEmulation\copyDepthToRDRAM=0
 
+[RUSH%202]
+frameBufferEmulation\bufferSwapMode=1
+
 [SAN%20FRANCISCO%20RUSH]
 Good_Name=San Francisco Rush Extreme Racing (U)
 frameBufferEmulation\bufferSwapMode=1
