Add custom setting for Top Gear Rally 2

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -193,5 +193,11 @@ frameBufferEmulation\N64DepthCompare=1
 Good_Name=Tonic Trouble (E)(U)
 frameBufferEmulation\copyToRDRAM=1
 
+[TG%20RALLY%202]
+frameBufferEmulation\copyToRDRAM=1
+
+[TOP%20GEAR%20RALLY%202]
+frameBufferEmulation\copyToRDRAM=1
+
 [W.G.%203DHOCKEY]
 frameBufferEmulation\bufferSwapMode=1
