Add custom setting for Turok - Dinosaur Hunter.

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -199,5 +199,11 @@ frameBufferEmulation\copyToRDRAM=1
 [TOP%20GEAR%20RALLY%202]
 frameBufferEmulation\copyToRDRAM=1
 
+[turok_dinosaur_hunte]
+frameBufferEmulation\copyDepthToRDRAM=1
+
+[TUROK_DINOSAUR_HUNTE]
+frameBufferEmulation\copyDepthToRDRAM=1
+
 [W.G.%203DHOCKEY]
 frameBufferEmulation\bufferSwapMode=1
