Add custom settings for Mega Man 64.
Fixed #366 Mega Man 64 (All) - Intro Squares

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -88,6 +88,9 @@ frameBufferEmulation\fbInfoDisabled=0
 [J%20WORLD%20SOCCER3]
 frameBufferEmulation\N64DepthCompare=1
 
+[MEGA%20MAN%2064]
+graphics2D\correctTexrectCoords=2
+
 [OLYMPIC%20HOCKEY]
 frameBufferEmulation\bufferSwapMode=1
 
@@ -151,6 +154,9 @@ frameBufferEmulation\copyDepthToRDRAM=0
 Good_Name=Pokemon Stadium Kin Gin (J)
 frameBufferEmulation\copyToRDRAM=0
 frameBufferEmulation\copyDepthToRDRAM=0
+
+[ROCKMAN%20DASH]
+graphics2D\correctTexrectCoords=2
 
 [RUSH%202]
 frameBufferEmulation\bufferSwapMode=1
