Enable native res texrects in custom settings for Mario Kart 64
Fixed #607 MK64 Menus misaligned?

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -120,6 +120,10 @@ frameBufferEmulation\copyAuxToRDRAM=1
 Good_Name=Mario Golf (E)(J)(U)
 frameBufferEmulation\copyDepthToRDRAM=0
 
+[MARIOKART64]
+Good_Name=Mario Kart 64 (E)(J)(U)
+graphics2D\enableNativeResTexrects=1
+
 [MARIO%20STORY]
 Good_Name=Mario Story (J)
 frameBufferEmulation\copyToRDRAM=1
