Cleanup custom.ini

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -88,16 +88,6 @@ frameBufferEmulation\fbInfoDisabled=0
 [J%20WORLD%20SOCCER3]
 frameBufferEmulation\N64DepthCompare=1
 
-[MEGA%20MAN%2064]
-graphics2D\correctTexrectCoords=2
-
-[OLYMPIC%20HOCKEY]
-frameBufferEmulation\bufferSwapMode=1
-
-[PERFECT%20STRIKER]
-Good_Name=Jikkyou J.League Perfect Striker (J)
-frameBufferEmulation\N64DepthCompare=1
-
 [301E07CC]
 Good_Name=Mahjong Master (J)
 frameBufferEmulation\N64DepthCompare=1
@@ -128,6 +118,14 @@ graphics2D\enableNativeResTexrects=1
 Good_Name=Mario Story (J)
 frameBufferEmulation\copyToRDRAM=1
 
+[MEGA%20MAN%2064]
+Good_Name=Mega Man 64 (U)
+graphics2D\correctTexrectCoords=2
+
+[MEGAMAN%2064]
+Good_Name=Mega Man 64 (Proto)
+graphics2D\correctTexrectCoords=2
+
 [NUD-DMPJ-JPN_convert]
 Good_Name=Mario Paint Studio (cart hack)
 frameBufferEmulation\copyFromRDRAM=1
@@ -136,6 +134,9 @@ frameBufferEmulation\copyFromRDRAM=1
 Good_Name=Mario Artist Talent Studio (cart hack)
 frameBufferEmulation\copyAuxToRDRAM=1
 
+[OLYMPIC%20HOCKEY]
+frameBufferEmulation\bufferSwapMode=1
+
 [PAPER%20MARIO]
 Good_Name=Paper Mario (E)(U)
 frameBufferEmulation\copyToRDRAM=1
@@ -143,6 +144,10 @@ frameBufferEmulation\copyToRDRAM=1
 [PENNY%20RACERS]
 Good_Name=Penny Racers (E)(U)
 frameBufferEmulation\copyToRDRAM=0
+
+[PERFECT%20STRIKER]
+Good_Name=Jikkyou J.League Perfect Striker (J)
+frameBufferEmulation\N64DepthCompare=1
 
 [POKEMON%20SNAP]
 Good_Name=Pokemon Snap (U)
@@ -160,6 +165,7 @@ frameBufferEmulation\copyToRDRAM=0
 frameBufferEmulation\copyDepthToRDRAM=0
 
 [ROCKMAN%20DASH]
+Good_Name=Rockman Dash - Hagane no Boukenshin (J)
 graphics2D\correctTexrectCoords=2
 
 [RUSH%202]
@@ -192,11 +198,11 @@ frameBufferEmulation\copyFromRDRAM=1
 frameBufferEmulation\copyToRDRAM=0
 
 [TETRISPHERE]
-Good Name=Tetrisphere (U)
+Good_Name=Tetrisphere (U)
 generalEmulation\correctTexrectCoords=2
 
 [TIGGER%27S%20HONEY%20HUNT]
-Good_Name=Tigger's Honey Hunt (E)(U)
+Good_Name=Tiggers Honey Hunt (E)(U)
 frameBufferEmulation\N64DepthCompare=1
 
 [TONIC%20TROUBLE]
