Enable halos removal for Kirby 64 in custom settings. Fixed #1695
custom.ini cleanup.

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -28,6 +28,8 @@ frameBufferEmulation\copyToRDRAM=1
 [DMPJ]
 Good_Name=Mario Paint Studio (64dd disk)
 frameBufferEmulation\copyFromRDRAM=1
+frameBufferEmulation\nativeResFactor=1
+frameBufferEmulation\copyAuxToRDRAM=1
 
 [DMTJ]
 Good_Name=Mario Artist Talent Studio (64dd disk)
@@ -92,19 +94,13 @@ frameBufferEmulation\N64DepthCompare=1
 Good_Name=Mahjong Master (J)
 frameBufferEmulation\N64DepthCompare=1
 
-[DMPJ]
-Good_Name=Mario Artist Paint Studio (J)
-frameBufferEmulation\nativeResFactor=1
-frameBufferEmulation\copyAuxToRDRAM=1
-frameBufferEmulation\copyFromRDRAM=1
-
 [DMGJ]
 Good_Name=Mario Artist Polygon Studio (J)
 frameBufferEmulation\copyAuxToRDRAM=1
 
-[DMTJ]
-Good_Name=Mario Artist Talent Studio (J)
-frameBufferEmulation\copyAuxToRDRAM=1
+[KIRBY64]
+Good_Name=Kirby 64 - The Crystal Shards (E)(J)(U)
+texture\enableHalosRemoval=1
 
 [MARIOGOLF64]
 Good_Name=Mario Golf (E)(J)(U)
@@ -159,7 +155,7 @@ Good_Name=Pokemon Stadium 2 (E)(F)(G)(I)(J)(S)(U)
 frameBufferEmulation\copyToRDRAM=0
 frameBufferEmulation\copyDepthToRDRAM=0
 
-[POKEMON%20STADIUM%20G&S]
+[POKEMON%20STADIUM%20G%26S]
 Good_Name=Pokemon Stadium Kin Gin (J)
 frameBufferEmulation\copyToRDRAM=0
 frameBufferEmulation\copyDepthToRDRAM=0
@@ -215,10 +211,8 @@ frameBufferEmulation\copyToRDRAM=1
 [TOP%20GEAR%20RALLY%202]
 frameBufferEmulation\copyToRDRAM=1
 
-[turok_dinosaur_hunte]
-frameBufferEmulation\copyDepthToRDRAM=1
-
 [TUROK_DINOSAUR_HUNTE]
+Good_Name=Turok - Dinosaur Hunter (E)(G)(U)(J)
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [W.G.%203DHOCKEY]
