Enable NativeRes Texrects in Kirby 64 remove halos removal because it causes more issues

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -100,7 +100,7 @@ frameBufferEmulation\copyAuxToRDRAM=1
 
 [KIRBY64]
 Good_Name=Kirby 64 - The Crystal Shards (E)(J)(U)
-texture\enableHalosRemoval=1
+graphics2D\enableNativeResTexrects=1
 
 [MARIOGOLF64]
 Good_Name=Mario Golf (E)(J)(U)
