Enable halos removal for Pokemon Puzzle League Fixes green outline around some textures

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -160,6 +160,10 @@ Good_Name=Pokemon Stadium Kin Gin (J)
 frameBufferEmulation\copyToRDRAM=0
 frameBufferEmulation\copyDepthToRDRAM=0
 
+[PUZZLE%20LEAGUE%20N64]
+Good_Name=Pokemon Puzzle League (E)(F)(G)(U)
+texture\enableHalosRemoval=1
+
 [ROCKMAN%20DASH]
 Good_Name=Rockman Dash - Hagane no Boukenshin (J)
 graphics2D\correctTexrectCoords=2
