Enable native texrects in Mystical Ninja 2 / Goemon's Great Adventure Fixes black lines/seams in background tiles

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -59,6 +59,14 @@ frameBufferEmulation\N64DepthCompare=1
 Good_Name=F-1 Pole Position 64 (E)(U)
 frameBufferEmulation\copyToRDRAM=1
 
+[GOEMON2%20DERODERO]
+Good_Name=Ganbare Goemon - Dero Dero Douchuu Obake Tenkomori (J)
+graphics2D\enableNativeResTexrects=1
+
+[GOEMONS%20GREAT%20ADV]
+Good_Name=Goemons Great Adventure (U)
+graphics2D\enableNativeResTexrects=1
+
 [HARVESTMOON64]
 Good_Name=Harvest Moon 64 (U)
 frameBufferEmulation\N64DepthCompare=1
@@ -121,6 +129,10 @@ graphics2D\correctTexrectCoords=2
 [MEGAMAN%2064]
 Good_Name=Mega Man 64 (Proto)
 graphics2D\correctTexrectCoords=2
+
+[MYSTICAL%20NINJA2%20SG]
+Good_Name=Mystical Ninja 2 Starring Goemon (E)
+graphics2D\enableNativeResTexrects=1
 
 [NUD-DMPJ-JPN_convert]
 Good_Name=Mario Paint Studio (cart hack)
