Make optimization implemented in e0418c3c342c6 as optional. S. F. Rush looks much better without the optimization.
Fixed #2068 S. F. Rush and Rush 2 - Regressions

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -182,18 +182,22 @@ graphics2D\correctTexrectCoords=2
 
 [RUSH%202]
 frameBufferEmulation\bufferSwapMode=1
+graphics2D\correctTexrectCoords=2
 
 [SAN%20FRANCISCO%20RUSH]
 Good_Name=San Francisco Rush Extreme Racing (U)
 frameBufferEmulation\bufferSwapMode=1
+graphics2D\enableNativeResTexrects=2
 
 [S.F.RUSH]
 Good_Name=San Francisco Rush Extreme Racing (E)
 frameBufferEmulation\bufferSwapMode=1
+graphics2D\enableNativeResTexrects=2
 
 [S.F.%20RUSH]
 Good_Name=San Francisco Rush Extreme Racing (U)
 frameBufferEmulation\bufferSwapMode=1
+graphics2D\enableNativeResTexrects=2
 
 [SHADOWMAN]
 Good_Name=Shadow Man (B)(E)(F)(G)(U)
